--- a/Data Analysis- Assignment.ipynb
+++ b/Data Analysis- Assignment.ipynb
@@ -531,11 +531,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "6178ce12",
+   "cell_type": "markdown",
+   "id": "953bb3b5",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 1) Replace the NaN values with correct value. and justify why you have chosen the same."
    ]
@@ -624,11 +622,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "7ac90ae9",
+   "cell_type": "markdown",
+   "id": "4b20df0b",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 2. how many of them are not placed?"
    ]
@@ -676,11 +672,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "cda5c1a3",
+   "cell_type": "markdown",
+   "id": "b63e53c3",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 3. find the reason for non placement from the dataset"
    ]
@@ -848,11 +842,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "0780ce20",
+   "cell_type": "markdown",
+   "id": "21f8fbcd",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 4) what kind of relation between salary and mba_p?"
    ]
@@ -887,11 +879,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "2e445e12",
+   "cell_type": "markdown",
+   "id": "65e58fcf",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 5) which specialization is getting minimum salary?"
    ]
@@ -924,11 +914,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "8f2dc97f",
+   "cell_type": "markdown",
+   "id": "0d9e2c4a",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 6) How many of them getting above 500000 salary?"
    ]
@@ -1244,14 +1232,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "1e79d90f",
+   "cell_type": "markdown",
+   "id": "df8e0ddd",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 7) Test the analysis of variance between etest_p and mba_p at significance level 5%.\n",
-    "# (make decision using hypothesis testing)"
+    "# 7) Test the analysis of variance between etest_p and mba_p at significance level 5%. (make decision using hypothesis testing)"
    ]
   },
   {
@@ -1313,11 +1298,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "a5d2e0b2",
+   "cell_type": "markdown",
+   "id": "32385953",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 8) Test the similarity between the degree_t(sci&Tech) and specialisation(Mkt&HR)with respect to salary at significance level of 5%.(Make decision using Hypothesis Testing)"
    ]
@@ -1361,13 +1344,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "9535519e",
+   "cell_type": "markdown",
+   "id": "262d2ba4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#9) convert the normal distribution to standard normal distribution for salary column"
+    "# 9) convert the normal distribution to standard normal distribution for salary column"
    ]
   },
   {
@@ -1455,13 +1436,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "3a9683d8",
+   "cell_type": "markdown",
+   "id": "9646bf32",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#10) what is the probability density function of the salary range from 700000 to  900000?"
+    "# 10) what is the probability density function of the salary range from 700000 to  900000?"
    ]
   },
   {
@@ -1721,13 +1700,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "91ce66fb",
+   "cell_type": "markdown",
+   "id": "b4f0472e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#11) Test the similarity between the degree_t(sci&Tech)with respect to etest_p and mba_p at significance level of 5%.(Make decision using Hypothesis Testing)"
+    "# 11) Test the similarity between the degree_t(sci&Tech)with respect to etest_p and mba_p at significance level of 5%.(Make decision using Hypothesis Testing)"
    ]
   },
   {
@@ -1765,11 +1742,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "88ccc3aa",
+   "cell_type": "markdown",
+   "id": "144840a9",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 12) Which Parameter is highly correlated with salary?"
    ]
@@ -1813,11 +1788,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "0d0f733e",
+   "cell_type": "markdown",
+   "id": "25500e0f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 13)plot any useful graph and explain it "
    ]
@@ -1860,7 +1833,11 @@
    "id": "9c1785f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# In this swarmplot,the highest salary got by 1 student in Mkt&Fin and above 600k to 800k 2 students got in same Mkt&fin.\n",
+    "# 3 students got 500k salary in same MKt&fin \n",
+    "#but in Mkt&HR highest salary is between 400k to 500k got 1 student.compare to Mkt & fin,Mkt&HR is getting salary very low,moreover Mkt & fin more student got selected with good package. "
+   ]
   }
  ],
  "metadata": {
